@@ -14,7 +14,7 @@
 </head>
 <body>
   
-  <h1>SNMP Trap Translator v1.2beta1</h1>
+  <h1>SNMP Trap Translator v1.2beta2</h1>
   
 <b>(<a href="http://www.snmptt.org">SNMPTT</a>)</b><br />
 This file was last updated on:&nbsp;November 18th, 2006
@@ -238,6 +238,13 @@ variable names translated into symbolic form, want to be able to have
 Although not required, using the Perl module is recommended.</blockquote>
 <h2><a id="Whats-New" name="Whats-New"></a>What's New</h2>
 
+<h3><b>v1.2beta2</b> <b>- November 18th, 2006</b></h3>
+<ul>
+  <li>Added <b>snmptt.ini</b> option <b>unknown_trap_exec_format</b> to allow custom output.</li>
+  <li>Added 'use strict' pragma in source code to help reduce the possibility of typos in variable names etc.</li>
+  <li>Added <b>snmptt.ini</b> option <b>exec_escape</b> to escape wildards (* and ?) in EXEC, PREEXEC and the unknown_trap_exec commands.  This is enabled by default for Linux and Unix (or anything non-Windows) to prevent the wildcards from being expanded by the shell.</li>
+</ul>
+
 <h3><b>v1.2beta1</b> <b>- November 18th, 2006</b></h3>
 <ul>
   <li>Added <b>snmptt.ini</b> options <b>date_format</b>, <b>time_format</b>, <b>date_time_format</b>, <b>date_time_format_sql</b> and <b>stat_time_format_sql</b> to allow the output format for <b>$x</b> and <b>$X</b> substitution variables, and the format of the date/time for text logs and SQL to be changed using <b>strftime()</b> variables.  This allows for proper date/time data types to be used in SQL databases.</li>
@@ -263,7 +270,6 @@ Although not required, using the Perl module is recommended.</blockquote>
   </ul>
   </li>
 </ul>
-
 
 <h3><b>v1.1</b> <b>- January 17th, 2006</b></h3>
 <ul>
@@ -683,11 +689,22 @@ load</li>
 </ul>
 <h2><a id="Upgrading" name="Upgrading"></a>Upgrading</h2>
 
+<h3><b>v1.2beta1 to v1.2beta2</b></h3>
+<p>To upgrade from v1.2beta1 to v1.2beta2, you should:</p>
+<ol>
+  <li>Replace <b>snmptt</b> with the new version contained in the v1.2beta2 package.&nbsp; 
+  Make sure the file is executable (<b>chmod +x <i>snmptt</i></b>).</li>
+  <li>Backup your <b>snmptt.ini</b> file, replace it with the new version, and
+  make any necessary configuration changes to it.</li>
+  <li>Enable any new features in <b>snmptt.ini</b> as required.</li>
+  <li>For Linux and Unix (or anything non-Windows), the <b>snmptt.ini</b> <b>exec_escape</b> option is enabled by default which will escape wildcard characters (* and ?) for EXEC, PREEXEC and the unknown_trap_exec commands.  Disable if required.</li>
+</ol>
+
 <h3><b>v1.1 to v1.2beta1</b></h3>
 <p>To upgrade from v1.1 to v1.2beta1, you should:</p>
 <ol>
   <li>Replace <b>snmptt</b>,  <b>snmptthandler</b>, <b>snmpttconvertmib</b> and <b>snmpttconvert</b>
-  with the new versions contained in the v1.2beta package.&nbsp; Make sure the files are executable
+  with the new versions contained in the v1.2beta1 package.&nbsp; Make sure the files are executable
   (<b>chmod +x <i>filename</i></b>).</li>
   <li>Backup your <b>snmptt.ini</b> file, replace it with the new version, and
   make any necessary configuration changes to it.</li>
