@@ -1,3 +1,10 @@
+Dec 18th, 2006: Alex Burger <alex_b@users.sourceforge.net>
+- Added unknown_trap_exec_format option
+
+Dec 7th, 2006: Alex Burger <alex_b@users.sourceforge.net>
+- Added exec_escape option
+- Changed version to snmptt_1.2beta2
+
 Nov 18th, 2006: Alex Burger <alex_b@users.sourceforge.net>
 - Changed version to snmptt_1.2beta1
 
